<resources>
    <string name="app_name">HWServices</string>
    <string name="first_button">Start service</string>
    <string name="next_activity">Next activity</string>
    <string name="gotomain">GoToMain</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="close">Close</string>
    <string name="start_services">Start Services</string>
    <string name="getBindDate">get date from Bind</string>
    <string name="clear">Clear</string>
    <string name="getb">GetB</string>
</resources>
